Fix knob clipping

--- a/src/park-d-front-end/src/settings.css
+++ b/src/park-d-front-end/src/settings.css
@@ -413,7 +413,7 @@
     text-align: center;
 }
 .tolls_bg {
-    width: 70px;
+    width: 80px;
     height: 48px;
     background: url("../images/v39_107.png");
     background-repeat: no-repeat;
@@ -432,7 +432,7 @@
     opacity: 1;
     position: absolute;
     top: 7px;
-    left: 0px;
+    left: 5px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
@@ -446,7 +446,7 @@
     opacity: 1;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 5px;
     border-radius: 50%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -466,7 +466,7 @@
     text-align: center;
 }
 .ferries_bg {
-    width: 70px;
+    width: 80px;
     height: 48px;
     background: url("../images/v39_110.png");
     background-repeat: no-repeat;
@@ -485,7 +485,7 @@
     opacity: 1;
     position: absolute;
     top: 7px;
-    left: 0px;
+    left: 5px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
@@ -499,7 +499,7 @@
     opacity: 1;
     position: absolute;
     top: 0px;
-    left: 30px;
+    left: 35px;
     border-radius: 50%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -519,7 +519,7 @@
     text-align: left;
 }
 .freeways_bg {
-    width: 70px;
+    width: 80px;
     height: 48px;
     background: url("../images/v39_115.png");
     background-repeat: no-repeat;
@@ -538,7 +538,7 @@
     opacity: 1;
     position: absolute;
     top: 7px;
-    left: 0px;
+    left: 5px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
@@ -552,7 +552,7 @@
     opacity: 1;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 5px;
     border-radius: 50%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
